alpm-types/src/snapshots/checksum::checksum_parse_error@case_1_non_hex_digits.snap
---
source: alpm-types/src/checksum.rs
---
error: invalid hash digest
 | 
 | 0cf9180a764aba863a67b6d72f0918bc13gggggg642cb2dce5a34f0a702f9470ddc2bf125c12198b1995c233c34b4afd346c54a2334c350a948a51b6e8b4e6b6
 | ~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~^ expected ASCII hex digit
 | 
 = while parsing:
   checksum: (0cf9180a764aba863a67…)
   → invalid hash digest
   → Expected a hex SHA-512 hash digest consisting of 64 bytes.
   → expected ASCII hex digit
