alpm-types/src/snapshots/env::installed_new_parse_error@case_1.snap
---
source: alpm-types/src/env.rs
---
error: invalid package release
 | 
 | foo-1:1.0.0-bar-any
 |             ^ expected positive decimal integer
 | 
 = while parsing:
   installed package name: (foo-1:1.0.0-bar-any)
   │ → expected an alpm-package-version (full or full with epoch) followed by a `-` and an alpm-architecture
   └ full alpm-package-version: (1:1.0.0-bar-any)
     └ alpm-pkgrel: (bar-any)
       → invalid package release
       → expected positive decimal integer
