alpm-types/src/snapshots/env::installed_new_parse_error@case_2.snap
---
source: alpm-types/src/env.rs
---
foo-1:1.0.0_any
^
invalid alpm-package file name
expected a package name, followed by an alpm-package-version (full or full with epoch) and an architecture.
All components must be delimited with a dash ('-').
