alpm-types/src/snapshots/env::installed_new_parse_error@case_4.snap
---
source: alpm-types/src/env.rs
---
error: invalid character in package name
 | 
 | package$with$dollars-30-0.1-any
 | ~~~~~~~^ expected one of: ASCII alphanumeric character, `_`, `@`, `+`, `-`, `.`
 | 
 = while parsing:
   installed package name: (package$with$dollars…)
   └ alpm-package-name: (package$with$dollars…)
     → invalid character in package name
     → expected one of: ASCII alphanumeric character, `_`, `@`, `+`, `-`, `.`
