alpm-types/src/snapshots/env::installed_new_parse_error@case_5.snap
---
source: alpm-types/src/env.rs
---
packagename-30-0.1-any*asdf
                   ^
invalid character in system architecture
expected a string containing only ASCII alphanumeric characters and underscores.
