alpm-types/src/snapshots/env::invalid_makepkg_option@case_2.snap
---
source: alpm-types/src/env.rs
---
error: invalid build environment option
 | 
 | #somethingelse
 | ^ expected one of: `!`, ASCII alphanumeric character, `-`, `.`, `_`, `!`
 | 
 = while parsing:
   makepkg option: (#somethingelse)
   └ build environment option: (#somethingelse)
     → expected one of: `!`, ASCII alphanumeric character, `-`, `.`, `_`, `!`
